--- a/src/views/contact/contact-us.html
+++ b/src/views/contact/contact-us.html
@@ -1,91 +1,46 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
+<form class="form-signin" action="index.php" method="post">
+  <input type="hidden" name="section" value="contact-us" />
+  <input type="hidden" name="action" value="submitContactForm" />
+  <div class="text-center mb-4">
+    <img
+      class="mb-4"
+      src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg"
+      alt=""
+      width="72"
+      height="72"
+    />
+    <h1 class="h3 mb-3 font-weight-normal">Contact us</h1>
+    <p>
+      Build form controls with floating labels via the
+      <code>:placeholder-shown</code> pseudo-element.
+      <a href="https://caniuse.com/#feat=css-placeholder-shown"
+        >Works in latest Chrome, Safari, Firefox, and IE 10/11 (prefixed).</a
+      >
+    </p>
+  </div>
 
-    <title>Contact us</title>
+  <div class="form-label-group">
+    <input
+      name="email"
+      type="email"
+      id="email"
+      class="form-control"
+      placeholder="Email address"
+      required
+      autofocus
+    />
+    <label for="email">Email address</label>
+  </div>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.0/examples/starter-template/starter-template.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
-
-    <main role="main" class="container">
-
-    <form class="form-signin"  action="index.php" method="post">
-      <input type="hidden" name="section" value="contact-us"/>
-      <input type="hidden" name="action" value="submitContactForm"/>
-    <div class="text-center mb-4">
-      <img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Contact us</h1>
-      <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, Firefox, and IE 10/11 (prefixed).</a></p>
-    </div>
-  
-    <div class="form-label-group">
-      <input name="email" type="email" id="email" class="form-control" placeholder="Email address" required autofocus>
-      <label for="email">Email address</label>
-    </div>
-  
-    <div class="form-label-group">
-      <textarea name="message" id="message" class="form-control" required ></textarea>
-      <label for="inputPassword">Message</label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
-    <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2020</p>
-  </form>
-
-    </main><!-- /.container -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/popper.min.js"></script>
-    <script src="https://getbootstrap.com/docs/4.0/js/bootstrap.min.js"></script>
-  </body>
-</html>
-
+  <div class="form-label-group">
+    <textarea
+      name="message"
+      id="message"
+      class="form-control"
+      required
+    ></textarea>
+    <label for="inputPassword">Message</label>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Send</button>
+  <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2020</p>
+</form>
