--- a/src/modules/page/views/static-page.html
+++ b/src/modules/page/views/static-page.html
@@ -2,6 +2,6 @@
   <h1><?php echo $pageObj->title ?></h1>
   <p class="lead">
     <?php echo $pageObj->content ?><br />
-    All you get is this text and a mostly barebones HTML document.
+    This is a static page.
   </p>
 </div>
