--- a/src/views/admin/login.html
+++ b/src/views/admin/login.html
@@ -38,11 +38,11 @@
 
 <body class="text-center">
     <form class="form-signin" method="post">
-        <input type="hidden" name="module" value="dashboard">
-        <input type="hidden" name="action" value="submitLoginForm">
+        <input type="hidden" name="module" value="dashboard" />
+        <input type="hidden" name="action" value="submitLoginForm" />
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="text" id="inputEmail" class="form-control" name="username" placeholder="Email address" required autofocus>
+        <label for="username" class="sr-only">Username</label>
+        <input type="text" id="username" class="form-control" name="username" placeholder="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
         <div class="checkbox mb-3">
