--- a/src/views/admin/login.html
+++ b/src/views/admin/login.html
@@ -45,11 +45,15 @@
         <input type="text" id="username" class="form-control" name="username" placeholder="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+        <div class="text-danger">
+            <?= $_SESSION["validation_errors"] ?? '' ?>
+        </div>
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
         </div>
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
     </form>
