Customizing auth system, login  and admin panel

--- a/src/modules/admin/login/views/login.html
+++ b/src/modules/admin/login/views/login.html
@@ -38,7 +38,7 @@
 
 <body class="text-center">
     <form class="form-signin" method="post">
-        <input type="hidden" name="module" value="dashboard" />
+        <input type="hidden" name="module" value="login" />
         <input type="hidden" name="action" value="submitLoginForm" />
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="username" class="sr-only">Username</label>
