--- a/src/modules/admin/pageList/views/page-list.html
+++ b/src/modules/admin/pageList/views/page-list.html
@@ -77,7 +77,7 @@
                         </i>
                         View
                       </a>
-                      <a class="btn btn-info btn-sm" href="#">
+                      <a class="btn btn-info btn-sm" href="/admin/index.php?module=pageList&action=editPage&id=$summary->id">
                         <i class="fas fa-pencil-alt">
                         </i>
                         Edit
