lesson 15 - Push to DB
Slight changes to the ui style to help with my fustration. on a big screen.

Added funcionality to now save entities (in admin panel)

--- a/src/modules/admin/pageList/views/page-item-edit.html
+++ b/src/modules/admin/pageList/views/page-item-edit.html
@@ -7,6 +7,7 @@
         <form role="form" action="/admin/index.php" method="post">
             <input type="hidden" name="module" value="pageList" />
             <input type="hidden" name="action" value="submitEditPageForm" />
+            <input type="hidden" name="id" value="<?= $page->id ?>" />
             <div class="form-group">
                 <label>Page name</label>
                 <input type="text" name="title" class="form-control" value="<?= $page->title ?>" placeholder="Page name">
