--- a/src/modules/admin/pageList/views/page-list.html
+++ b/src/modules/admin/pageList/views/page-list.html
@@ -5,12 +5,12 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Projects</h1>
+          <h1>Pages</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">Projects</li>
+            <li class="breadcrumb-item active">Pages</li>
           </ol>
         </div>
       </div>
@@ -23,7 +23,7 @@
     <!-- Default box -->
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title">Projects</h3>
+        <h3 class="card-title">Pages</h3>
 
         <div class="card-tools">
           <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -31,6 +31,11 @@
           <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
             <i class="fas fa-times"></i></button>
         </div>
+        <a class="btn btn-primary btn-sm" href="/admin/index.php?module=pageList&action=editPage">
+          <i class="fas fa-folder">
+          </i>
+          Create New
+        </a>
       </div>
       <div class="card-body p-0">
         <table class="table table-striped projects">
@@ -82,7 +87,7 @@
                         </i>
                         Edit
                       </a>
-                      <a class="btn btn-danger btn-sm" href="#">
+                      <a class="btn btn-danger btn-sm" href="/admin/index.php?module=pageList&action=deletePage&id=$summary->id">
                         <i class="fas fa-trash">
                         </i>
                         Delete
